Heading style added

--- a/views/viewpage.ejs
+++ b/views/viewpage.ejs
@@ -9,7 +9,7 @@
         <h5><%= author %></h5>
         <h3>Genre: <%= genre %></h3>
         <p class="lead text-muted"><%= content %></p></div>
-       
+
       <div class="re">
         <div class="feedback">
           <div class="rating">
@@ -115,10 +115,10 @@
       </div>
     </div>
         <p>
-          <a type="submit" class="btn btn-primary my-1 mt-4" href="/home/mybooks/<%= title %>">Add to <b>MY BOOKS</b></a>
-          <a href="<%= link %>" class="btn btn-secondary mt-4 my-1">Purchase Link</a>
+          <a type="submit" class="btn btn-outline-dark waves-effect mt-4 my-1" href="/home/mybooks/<%= title %>">Save to <b>MY BOOKS</b></a>
+          <a href="<%= link %>" class="btn btn-success mt-4 my-1">Buy Now <i class="fas fa-shopping-cart"></i></a>
         </p>
-       
+
         <!-- <div class="contain">
               <div class="post">
                  <div class="text">
