--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,17 +1,20 @@
 <%- include('partials/header.ejs') %>
   <section class="mt-3">
     <div class="container">
-      <div class="dropdown show " style="float: left;">
-        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Select Category
-        </a>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          <a class="dropdown-item" href="/home/category/Motivation">Motivation</a>
-          <a class="dropdown-item" href="/home/category/Thriller">Thriller</a>
-          <a class="dropdown-item" href="/home/category/Drama">Drama</a>
+      <div class="heading">
+        <div class="dropdown show" style="float: left;">
+          <a class="btn btn-outline-light dropdown-toggle btn-light ml-2" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Select Category
+          </a>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="/home/category/Motivation">Motivation</a>
+            <a class="dropdown-item" href="/home/category/Thriller">Thriller</a>
+            <a class="dropdown-item" href="/home/category/Drama">Drama</a>
+          </div>
         </div>
+        <h1 style="text-align: center;"><b>Explore</b></h1>
       </div>
-      <h1 style="text-align: center;"><b>All Books</b></h1>
+
       <div class="row ">
         <% newListItem.forEach(function(item) { %>
           <div class="col-md-3 p-3 ">
