--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="heading">
         <div class="dropdown show" style="float: left;">
-          <a class="btn btn-outline-light dropdown-toggle btn-light ml-2" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="btn btn-outline-light dropdown-toggle btn-light ml-2 mt-1" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Select Category
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
