--- a/views/viewpage.ejs
+++ b/views/viewpage.ejs
@@ -7,11 +7,12 @@
         <h1 class="jumbotron-heading " name="title"><b><%= title%></b></h1>
         <div>
         <h5><%= author %></h5>
-        <h3>Genre: <%= genre %></h3>
+        <h3>Category: <%= genre %></h3>
         <p class="lead text-muted"><%= content %></p></div>
 
       <div class="re">
         <div class="feedback">
+          <h3>Rate This Book</h3>
           <div class="rating">
             <input type="radio" name="rating" id="rating-5">
             <label for="rating-5"></label>
