--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #3AB790">
         <div class="container-fluid">
-          <a class="navbar-brand light" href="#">Bookify</a>
+          <a class="navbar-brand" style="color: #eeeeee; font-size: 2.2rem;" href="#">Bookify</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
