--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -67,7 +67,7 @@
 									</form>
 								</div>
 							</div>
-							<div class="col-lg-4 col-md-5 d-flex align-items-stretch">
+							<div class="col-lg-4 col-md-5 d-flex align-items-stretch signin">
 								<div class="info-wrap bg-primary w-100 p-4 mb-12 text-center">
 									<h3 style="margin-top: 10vh;">
 										<b>Create Account !</b>
