--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,16 +7,17 @@ font-family: "Poppins", sans-serif;
   background-color: #132c33;
   text-align: center;
   justify-content: center;
-  padding: 5px 5px;
-  border-radius: 10px;
+  padding: 10px 10px;
+  border-radius: 8px;
 }
 
   .heading a {
-    margin-top: 6px;
+    position: absolute;
   }
 
 .heading h1 {
   color: #fdfaf6;
+  font-size: 30px;
   margin-right: 20px;
   text-shadow: 2px 2px 4px #000000;
 }
